--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,3 +1,5 @@
+$bp-sm: '(max-width: 62em)';
+
 body {
   --gap: clamp(1rem, 6vw, 3rem);
   --full: minmax(var(--gap), 1fr);
@@ -18,7 +20,7 @@ main {
   display: flex;
   gap: 1em;
 
-  @media (max-width: 62em) {
+  @media($bp-sm) {
     flex-direction: column;
     gap: 0;
   }
@@ -28,7 +30,7 @@ form {
   width: 50%;
   margin-inline: auto;
 
-  @media (max-width: 62em) {
+  @media($bp-sm) {
     width: 100%;
   }
 }
